# mdbook-mermaid-ssr

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  deny.toml  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: autofix.yml  cd.yml  ci.yml  codeql.yml  pr-relabeling.yml  pr-title.yml  scorecard.yml  security.yml
payload/: index.html
src/: config.rs  lib.rs  renderer.rs
src/snapshots/: mdbook_mermaid_ssr__renderer__tests__security_level_antiscript.snap  mdbook_mermaid_ssr__renderer__tests__security_level_loose.snap  mdbook_mermaid_ssr__renderer__tests__security_level_sandbox.snap  mdbook_mermaid_ssr__renderer__tests__security_level_strict.snap
tests/: integration.rs
tests/fixtures/full-config/: book.toml
tests/fixtures/full-config/src/: intro.md  (+4 more)
tests/fixtures/test-book-error-comment/: book.toml
tests/fixtures/test-book-full-config/: book.toml
tests/fixtures/test-book-with-timeout/: book.toml
tests/fixtures/theme-forest/: book.toml
tests/snapshots/: integration__chapter_with_mermaid.html.snap  integration__chapter_with_mermaid.snap  integration__chapter_with_mermaid.snap.new  integration__chapter_with_mermaid.snap.new.html  integration__chapter_with_mermaid_html.snap  integration__chapter_without_mermaid.html.snap  integration__chapter_without_mermaid.snap  integration__chapter_without_mermaid.snap.html  integration__error_comment_handling.snap  integration__full_config_dark_theme.snap  integration__full_config_hand_drawn.snap  integration__full_config_multiple_diagrams.snap  integration__theme_forest.snap
(+9 files in other folders)
